--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -226,14 +226,16 @@ For determining the relative orientation of the crystal with regards to the dete
 
 
 \begin{table}[]
+	\caption{Results of the Kossel line analysis}
 	\begin{tabular}{lllll}
 		\hline
-		Sample & Inital Translation & Inital Rotation    & Energy & Rotation           \\
+		Sample & Initial Translation & Initial Rotation    & Energy & Rotation           \\
 		& x,y in pixels      & Euler angles x,y,z & in keV    & Euler angles x,y,z \\
 		\hline
 		GaAs 1 &                    &                    &        &                    \\
 		GaAs 2 &                    &                    &        &                   \\
 		\hline
 	\end{tabular}
+
 \label{tab:kosselfit}
 \end{table}
