move stuff around

--- a/Tex/app_code.tex
+++ b/Tex/app_code.tex
@@ -1,4 +1,5 @@
 \chapter{Implementation Details}
+All source code is made available under \url{https;//github.com/fzimmermann89/msc}.
 \section{Simulation}
 In \fref{algo:td} the procedure for time dependent simulations is show.
 \begin{algorithm}
