--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -178,7 +178,7 @@ As the amount of recorded data is huge, an efficient strategy for filtering on s
 	\begin{subfigure}{0.45\textwidth}
 		\includegraphics[width=\linewidth]{images/mask.png}
 	\end{subfigure}
-	\caption{Usable detector area (yellow) of the dual (a) and octal (b) detector after signal correction and statistical filtering. Only the intersection of good areas for each run will be used. This way the same mask and number of correlation pairs will be used for samples that will be compared to each other.}	
+	\caption[Usable detector area]{Usable detector area (yellow) of the dual (a) and octal (b) detector after signal correction and statistical filtering. Only the intersection of good areas for each run will be used. This way the same mask and number of correlation pairs will be used for samples that will be compared to each other.}	
 \end{figure}
 
 \paragraph{Shot filtering}
