--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -42,7 +42,7 @@
 %\usepackage{refcheck}
 
 \usepackage{tocvsec2}
-\settocdepth{section}
+\settocdepth{subsection}
 
 
 %Appendices -> Anhang
@@ -285,6 +285,7 @@
 	\acro{PS}{Polystyrene}
 	\acro{MMA}{Methylmethacrylate}
 	\acro{EHMA}{Etyhlhexymethacrylate}
+	\acro{PSF}{Point Spread Function}
 \end{acronym}
 
 \endgroup
