--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -14,28 +14,11 @@ Ultimately, the results of these simulations were used the determine the feasibi
 
 
 
-\paragraph{Detector effects}
-To simulate the influence of detector charecteristics charge-sharing and readout noise, an image degradation is performed: After Poisson sampling the simulated speckle image, for each photon an uniform random position within its pixel is chosen as the center of Gaussian distribution with FWHM of 0.15 pixel  (similar to the size of the PSF for MPCCD detectors XXX).
-The intensity within one pixel is given by the integral over the Gaussian,
-\begin{equation}
-I(\Delta x,\Delta y)=\frac{1}{4} \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta x}{\sqrt{2}
-	\sigma}\right)+\text{erf}\left(\frac{\sfrac{1}{2}+\Delta x}{\sqrt{2} \sigma}\right)\right) \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta y}{\sqrt{2}
-	\sigma}\right)+\text{erf}\left(\frac{\sfrac{1}{2}+\Delta y}{\sqrt{2} \sigma}\right)\right)
-\end{equation}
-with $\sigma$ the standard deviation of the Gaussian in pixels and $\Delta x$, $\Delta y$ the distance of the pixel to the chosen photon center, and evaluated for the neighboring pixels. Afterwards a Gaussian readout noise is added. The effect of this degradation on the spectrum is illustrated in \fref{fig:degrad}.
-
-
-\begin{figure}
-	\centering
-\includegraphics[width=0.6\linewidth]{images/sharing.png}
-	\caption[Effect of charge sharing and detector noise]{Effect of charge sharing and detector noise on the spectrum of the simulated speckle pattern.}
-	\label{fig:degrad}
-\end{figure}
 
 
 
 \section{Time independent Simulations}
-In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently the superposition of scaler electrical fields emitted with random phases. The simulation of the intensity at multiple discrete points can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model.
+In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently the superposition of scalar electrical fields emitted with random phases. The simulation of the intensity at multiple discrete points can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model.
 
 
 
@@ -46,7 +29,24 @@ In an infinite coherence time, stationary sources approximation, the simulation 
 
 
 
-\subsection{Reconstruction}
+\subsection{Detector effects}
+To simulate the influence of detector characteristics charge-sharing and readout noise, an image degradation is performed: After Poisson sampling the simulated speckle image, for each photon an uniform random position within its pixel is chosen as the center of Gaussian distribution with FWHM of 0.15 pixel  (similar to the size of the PSF for MPCCD detectors XXX).
+The intensity within one pixel is given by the integral over the Gaussian,
+\begin{equation}
+	I(\Delta x,\Delta y)=\frac{1}{4} \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta x}{\sqrt{2}
+		\sigma}\right)+\text{erf}\left(\frac{\sfrac{1}{2}+\Delta x}{\sqrt{2} \sigma}\right)\right) \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta y}{\sqrt{2}
+		\sigma}\right)+\text{erf}\left(\frac{\sfrac{1}{2}+\Delta y}{\sqrt{2} \sigma}\right)\right)
+\end{equation}
+with $\sigma$ the standard deviation of the Gaussian in pixels and $\Delta x$, $\Delta y$ the distance of the pixel to the chosen photon center, and evaluated for the neighboring pixels. Afterwards a Gaussian readout noise is added. The effect of this degradation on the spectrum is illustrated in \fref{fig:degrad}.
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.6\linewidth]{images/sharing.png}
+	\caption[Effect of charge sharing and detector noise]{Effect of charge sharing and detector noise on the spectrum of the simulated speckle pattern.}
+	\label{fig:degrad}
+\end{figure}
+
 
 \paragraph{Photon counting}
 As the relevant signal for the correlation analysis is the presence of fluorescence photons, but charge sharing and readout noise of the detector as well as the presence of photons caused by air scattering degrades this signal, different approaches  of preprocessing will be compared:
@@ -83,23 +83,27 @@ Possible avenues for improvement would be to use a more sophisticated droplet sc
 
 
 
-\paragraph{Normalisation}
+\subsection{Normalisation}
 Mean of all pixels 
 Mean of all pixels inside the overlap
 
 If only a single image is taken, the expectation value for each pixel has to be approximated.
 
 If multiple images are taken, under the assumption of ergodicity, the expectation value for each pixel can be approximated by its mean over many images. To account for fluctuations in the exciting FEL pulse and resulting fluctations of the fluorescence intensity, it can be assumed that the distribution over pixel  intensities and FEL intensities are uncorrelated, and the detection probability of each pixel in each shot can be factorized into the product of the probability to detect a photon in a pixel and to detect a photon in a shot. Therefor, the effect of the FEL intensity fluctuations can be suppressed by normalizing each image by the total intensity of the image.
-\subsection{Single Sphere}
-radial symmetrie
-
-\subsection{Multiple Spheres}
 
 
-\subsection{Crystal}
+
+\subsection{Autocorrelation}
+
+\subsection{Accessible Reciprocal Space}
+	\paragraph{Crystal}
+	\paragraph{Spherical Samples}
+
+\subsection{Multiple Samples}
 
 
-\subsection{Superlattice}
+
+
 
 \section{Time dependent Simulations}
 
@@ -162,7 +166,6 @@ To investigate the influence of sample thickness for crystalline samples as seco
 	\caption[Time Dependent IDI Simulation of a Sphere]{Time Dependent IDI Simulation of a Sphere: For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, a series of simulations were performed with different decay times $\tau$ of the emission and different exciting pulse FWHM. In a) the SNR of the simulated speckle pattern is compared with the theoretical  $1/\sqrt{erfcx(2\sigma/\tau}$ dependence on the ratio of pulse length and $\tau$. In b) exemplary radial profiles of the reconstruction of 50 images each are shown for one fixed $\tau$. Those reconstructions are used to plot the  dependence of the visibility on the pulse width in c). For long pulses, the reciprocal dependence on the pulse length is visible.}
 	\label{fig:tdpshere}
 \end{figure}
-
 
 
 \section{Implications for an experimental design}
