--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -324,7 +324,9 @@
 		\let\protect\l@section\protect\l@subsection
 	}
 	\makeatother
+	\input{app_plots}
 	\input{app_code}
+
 	\addtocontents{toc}{\endgroup}
 \end{appendices}
 
