--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -22,9 +22,6 @@ In an infinite coherence time, stationary sources approximation, the simulation 
 
 
 
-- Reconstruction shape
-- Dependence in Nimages, Dependence on Npairs, dependence on modes, random orientations
-
 
 
 
@@ -117,27 +114,24 @@ If multiple images are taken, under the assumption of ergodicity, the expectatio
 	\paragraph{Crystal}
 	\paragraph{Spherical Samples}
 
+
+\subsection{Number of images}
+\subsection{Undersampling and detector size}
+\subsection{Random Orientations}
+
 \subsection{Multiple Samples}
 To decide if having more than one spherical sample in the focus is advantageous, an additional simulation is performed:
  
-Multiple spheres inside the focal volume, placed randomly but ensuring a minimum distance between neighboring spheres larger than the diameter plus an additional buffer 5\,nm, simulating an layer of non-fluorescing organic dispersion agent capping the spheres with no other interaction. 
-Different numbers of spherical particles ranging from a single sphere over multiple spheres to a Poisson Sphere Distribution as a random placement of particles with the minimal allowed spacing and mean a volume fraction of approx. 25\% \footnote{without the buffer layer, the volume fraction would be around 50\%, significantly smaller than the densest possible packing} are compared.
-
-The structure factor of this hard-sphere model  (see \fref{fig:spheres}) shows
-
-
-20nm radius inside a 200nm (FWHM) focus with a spacing layer of 5nm, mean of 50000 excited atoms per sphere. The fluorescence is recorded on a 1024x1024 pixel (pixelsize 100\,um) detector placed 30\,cm In this geometry, Assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.
-
-10000 images for each IDI simulation.
-
-For the IDI simulation, the number of photons per atom in the focus is keept constant. In this setting, opposing effects occur: With increasing number of photons, the Poisson noise is reduced, but the signal strength in low scattering angles is decreased as the structure factor changes from a single sphere to a hard-sphere model. Therefor, for the chosen simulation parameters an optimum in the detectebility of a correlation effect can be found for a medium number of samples in the focus.
+Multiple spheres inside the focal volume, placed randomly but ensuring a minimum distance between neighboring spheres larger than the diameter plus twice the thickness of an additional layer of non-fluorescing organic dispersion agent capping the spheres with no other interaction are simulated.  The number of particles is varied, ranging from a single sphere over multiple spheres to a Poisson Sphere Distribution as a random placement of particles with the minimal allowed spacing and mean a volume fraction of approx. 25\% \footnote{without the buffer layer, the volume fraction would be around 50\%, significantly smaller than the densest possible packing}. 
+The structure factor of this ensemble of spherical particles is determined by three factors: The structure factor of the focus, the structure factor of points following an Poisson Sphere Distribution and the structure factor of a single sphere.(see \fref{fig:multisphere1}). As the number of spheres is increased, the influence of the focal volume increases and the distribution of the spheres's centers increases (see  \fref{fig:multisphere2})
+For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200nm (FWHM), the fluorescence on a 1024x1024 pixel (pixelsize 100\,um) detector placed 30\,cm is simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector. 
+For each number of spheres 5000 images are used for an IDI reconstruction.
+As the number of photons sphere is kept constant, opposing effects occur:  With increasing number of particles and therefor photons recorded, the Poisson noise is reduced, but the signal strength in low scattering angles is decreased as the structure factor changes from a single sphere to a hard-sphere model. Therefor, for the chosen simulation parameters an optimum in the detectebility of a correlation effect can be found for a medium number of samples in the focus, below
 
 
-The structure factor of the ensemble of spherical particels inside the focus is determined by three factors: The structure factor of the focus, the structure factor of an Poissoin Sphere Distribution and the scattering  of a single sphere.
+As the number of particles inside the focus is increased, in the low $q$ region of the IDI reconstruction, the focal volume becomes more visible. For high numbers of particles, the structure factor of the distribution of the centers of the particles causes a reduction in the scattering factor in the low $q$ region. For low numbers of particles inside the focus, the Poisson noise casued by the low photon numbers dominates the error.
 
-
-
- As the number of particles inside the focus is increased, in the low $q$ region of the IDI reconstruction, the focal volume becomes more visible. For high numbers of particles, the structure factor of the distribution of the centers of the particles causes a reduction in the scattering factor in the low $q$ region. For low numbers of particles inside the focus, the Poisson noise casued by the low photon numbers dominates the error.
+\
  
 \begin{figure}
 	\centering
@@ -153,7 +147,7 @@ The structure factor of the ensemble of spherical particels inside the focus is 
 		\includegraphics[width=\linewidth]{images/multisphere2.pdf}
 		\caption{IDI Reconstruction \\ $ $}
 	\end{subfigure}
-\caption{Structure Factor of a sphere with 20\,nm radius, a 200\,nm Gaussian focus and a random distribution of points at least 50\,nm apart (a), the structure factor of different numbers hard 20\,nm radius spheres with an additional 5\,nm separating layer in between inside the focal volume (b), and the result of an IDI simulation assuming iron fluorescence, a mean of $5*10^4$ excited atoms per sphere,  a 1024x1024 pixel (100\,um pixelsize) detector in a distance of 30\,cm (resulting in approximately 1\% of the emitted photons being captured), and using 5000 images (c). The shaded area is the standard error of the mean over images.}
+\caption{Structure factors of a sphere with 20\,nm radius, a 200\,nm Gaussian focus and a random distribution of points at least 50\,nm apart (a), the structure factor of different numbers of hard 20\,nm radius spheres with an additional 5\,nm separating layer on each sphere inside the focal volume (b), and the result of an IDI simulation assuming iron fluorescence, a mean of $5*10^4$ excited atoms per sphere, a 1024x1024 pixel (100\,um pixelsize) detector in a distance of 30\,cm (resulting in approximately 1\% of the emitted photons being captured), and using 5000 images (c). The shaded area is the standard error of the mean over images, the markers show the discrete $q$ steps in the reconstruction.}
 
 
 \end{figure}
@@ -203,22 +197,25 @@ To investigate the influence of sample thickness for crystalline samples as seco
 
 
 \begin{figure}
-	\begin{subfigure}[b]{0.45\textwidth}
+	\begin{subfigure}[b]{0.32\textwidth}
 		\includegraphics[width=\linewidth]{images/timedependent_1.pdf}
-d idi		\caption{Speckle SNR for different pulse FWHM and decay times $\tau$}
+	\caption{Speckle SNR for different pulse FWHM and decay times $\tau$\\$ $}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.45\textwidth}
+	\begin{subfigure}[b]{0.32\textwidth}
 		\includegraphics[width=\linewidth]{images/tdsphere.pdf}
 		\caption{Reconstructed radial profiles at different pulse FWHM and fixed decay time $\tau = 0.1$\,fs}
 	\end{subfigure}
-
-	\begin{subfigure}[b]{0.45\textwidth}
+	\begin{subfigure}[b]{0.32\textwidth}
 		\includegraphics[width=\linewidth]{images/timedependent_2.pdf}
 		\caption{Visibility of the reconstruction for different pulse FWHM and decay times $\tau$}
 	\end{subfigure}
 	\caption[Time Dependent IDI Simulation of a Sphere]{Time Dependent IDI Simulation of a Sphere: For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, a series of simulations were performed with different decay times $\tau$ of the emission and different exciting pulse FWHM. In a) the SNR of the simulated speckle pattern is compared with the theoretical  $1/\sqrt{erfcx(2\sigma/\tau}$ dependence on the ratio of pulse length and $\tau$. In b) exemplary radial profiles of the reconstruction of 50 images each are shown for one fixed $\tau$. Those reconstructions are used to plot the  dependence of the visibility on the pulse width in c). For long pulses, the reciprocal dependence on the pulse length is visible.}
 	\label{fig:tdpshere}
 \end{figure}
+
+\subsection{Pulse length}
+\subsection{Sample thickness}
+
 
 
 \section{Implications for an experimental design}
