--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -986,6 +986,21 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   groups       = {msc},
 }
 
+@Article{xraylib,
+  author   = {Tom Schoonjans and Antonio Brunetti and Bruno Golosio and Manuel {Sanchez del Rio} and Vicente Armando Solé and Claudio Ferrero and Laszlo Vincze},
+  journal  = {Spectrochimica Acta Part B: Atomic Spectroscopy},
+  title    = {The xraylib library for X-ray–matter interactions. Recent developments},
+  year     = {2011},
+  issn     = {0584-8547},
+  number   = {11},
+  pages    = {776-784},
+  volume   = {66},
+  abstract = {This work presents the recent developments of xraylib, an ANSI C library that provides convenient access to a large number of X-ray related databases, with a focus on quantitative X-ray fluorescence applications. The enhancements include improved X-ray fluorescence production cross sections that take into account cascade effects and M-lines, as well as revised line energies, atomic level widths, Compton broadening profiles etc. A full overview of the complete application programming interface is presented.},
+  doi      = {https://doi.org/10.1016/j.sab.2011.09.011},
+  keywords = {X-ray fluorescence, Quantification, Fundamental parameters, Software library},
+  url      = {https://github.com/tschoonj/xraylib},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
