--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -190,7 +190,7 @@ As the amount of recorded data is huge, an efficient strategy for filtering on s
 
 
 
-As shown in \fref{fig:spectrum}, the background corrected and masked spectrum of the detector shows peaks at multiplex of the fluorescence and exitation energy with a FWHM of .... . 
+As shown in \fref{fig:spectrum}, the background corrected and masked spectrum of the detector shows peaks at multiplex of the fluorescence and excitation energy with a FWHM of .... . 
 
 
 As discussed in \fref{chap:simulation}, the number of fluorescence photons can be estimated...
@@ -207,7 +207,7 @@ For determining the relative orientation of the crystal with regards to the dete
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
 	\caption{Program for fitting Kossel lines to experimental data}
-	\label{fig:kosselfig}
+	\label{fig:kosselfit}
 \end{figure}
 
 \subsection{Reconstruction}
