--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -185,7 +185,7 @@ the difference of the intensity-intensity correlation from unity is proportional
 	\end{subfigure}
 	 \begin{subfigure}[b]{0.45\textwidth}
 		\includegraphics[width=\linewidth]{images/crosssectionFe.pdf}
-		\caption[Cross Sections]{X-ray Cross Sections for Iron. Data from xraylib \ref{xraylib}}
+		\caption[Cross Sections]{X-ray Cross Sections for Iron. Data from xraylib \cite{xraylib}}
 		\label{fig:cross}
 	\end{subfigure}
 \end{figure}
@@ -397,5 +397,5 @@ As each point identified as belonging to a Kossel line has to be part of a conic
 	\includegraphics[width=\linewidth]{images/kossel2.pdf}
 	\end{subfigure}
 	\caption[Geometry of Kossel Lines]{Geometry of Kossel Lines: Radiation from within a light source within a single crystal gets scattered at the lattice planes, causing a change in intensity along a cone of opening angle $90^o-\theta_{hkl}$ and vertex hkl (left). On a spherical detector centered around the sample, those intensity changes would be visible as circular Kossel lines (center). On a planar detector, the intersections of the Kossel cones are visible as conic sections (right)}
-	\label{fig:doubleslit}
+	\label{fig:kossel}
 \end{figure}
