--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1001,6 +1001,39 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   url      = {https://github.com/tschoonj/xraylib},
 }
 
+@Article{muller1959,
+  author     = {Muller, Mervin E.},
+  journal    = {Commun. ACM},
+  title      = {A Note on a Method for Generating Points Uniformly on n-Dimensional Spheres},
+  year       = {1959},
+  issn       = {0001-0782},
+  month      = apr,
+  number     = {4},
+  pages      = {19–20},
+  volume     = {2},
+  address    = {New York, NY, USA},
+  doi        = {10.1145/377939.377946},
+  issue_date = {April 1959},
+  numpages   = {2},
+  publisher  = {Association for Computing Machinery},
+}
+
+@InProceedings{bridson,
+  author    = {Bridson, Robert},
+  booktitle = {ACM SIGGRAPH 2007 Sketches},
+  title     = {Fast Poisson Disk Sampling in Arbitrary Dimensions},
+  year      = {2007},
+  address   = {New York, NY, USA},
+  pages     = {22},
+  publisher = {Association for Computing Machinery},
+  series    = {SIGGRAPH '07},
+  abstract  = {In many applications in graphics, particularly rendering, generating samples from a blue noise distribution is important. However, existing efficient techniques do not easily generalize beyond two dimensions. Here I demonstrate a simple modification to dart throwing which permits generation of Poisson disk samples in O(N) time, easily implemented in arbitrary dimension.},
+  doi       = {10.1145/1278780.1278807},
+  isbn      = {9781450347266},
+  keywords  = {blue noise, Poisson disk, sampling},
+  location  = {San Diego, California},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
