fix to latex 2020

--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -1,5 +1,6 @@
 %%%%%%%%%%%%%   DEFINITIONEN   %%%%%%%%%%%%%%%
 %\pdfminorversion=5 
+\RequirePackage[2020-02-02]{latexrelease}
 \documentclass[12pt,a4paper,twoside]{book}
 
 %Packages
