--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -1,1 +1,26 @@
 \chapter{Conclusion and Outlook}
+
+The posibility to run an IDI setup in parallel with other detectors would allow for a combination of IDI with CDI
+
+Larger detectors
+
+Short pulses
+
+Element specific 
+
+
+Even just the ability to image to focal volume might be an useful diagnostic tool in certain experiments
+
+
+An avenue for improvement is subpixel resolution of the photon hits and better usage of the varying XXX of the detector to increase the resolution in the reconstruction, as this is currenly limited by the computional intensity to calulate the correlations at higher resolution.
+
+
+
+
+
+Upcoming experiment using sub-1\,fs pulse length as LCLS. 
+For this experiment, two new, signal optimized samples were chosen: Anodic Aluminum Oxide (AAO) membranes with regular spaced XX pores, with are filled with Nickel or Vanadium using atomic layer deposition, creating an array of hexagonal placed  500\,nm long cylinders. As the order of the self-organizing pores is smaller than the area used in the experiment, the simulated reconstruction shows rings (\fref{fig:outlook_aao}). Using realistic simulation parameters, XXX images should suffice to reach a SNR of XXX.
+The other sample is will be a litographically procuced gratings with a pitches of XXX (simulation shown in \fref{fig:outlook_grating}.). Both samples combine the advantes of a single crystal sample (namely intense features) while providing more signal and requiring less accessible reciprocal space. 
+
+
+Furthermore, for the randomly in plane oriented pores, the SNR might be improved by considering the polar correlations in the single image reconstructions as described in XXX
