--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -132,17 +132,22 @@ This results suggests, that for an experimental verification using Bragg peaks, 
 	\centering
 	\begin{subfigure}[b]{0.48\textwidth}
 		\includegraphics[width=\linewidth]{images/SNRNatoms.pdf}
-		\caption{ SNR dependence on crystal size\\$ $}
+		\caption{ SNR dependence on crystal size}
 		\label{fig:SNRNatoms}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.32\textwidth}
+	\begin{subfigure}[b]{0.48\textwidth}
+		\includegraphics[width=\linewidth]{images/detsize.pdf}
+		\caption{SNR dependence on detector size}
 	\end{subfigure}
-\caption{SNR dependence on the crystal size (a): As the crystal size increases, the SNR increases linear (as shown by the linear regression) with the number of atoms in the sample as long as the Bragg peaks is sufficiently sampled (blue points), in undersampling conditions the signal strength decreases linear with the number of atoms resulting in a near constant SNR (right side of the dashed line). The error bars show the standard deviation of the SNR calculated for the 12 visible Bragg peaks. For details on the simulation parameters, see main text}
+\caption[SNR dependence on crystal size and detector size]{SNR dependence on the crystal size (a): As the crystal size increases, the SNR increases linear (as shown by the linear regression) with the number of atoms in the sample as long as the Bragg peaks is sufficiently sampled (blue points), in undersampling conditions the signal strength decreases linear with the number of atoms resulting in a near constant SNR (right side of the dashed line). The error bars show the standard deviation of the SNR calculated for the 12 visible Bragg peaks. For details on the simulation parameters, see main text}
 
 \end{figure}
 
 
 \subsection{Random Orientations}
+
+
+
 
 \subsection{Multiple Samples}
 To decide if having more than one spherical sample in the focus is advantageous, an additional simulation is performed:
